# 仅保留稳定的profile-rustflags特性，移除git-dependencies
cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "frame-analyzer",
    "frame-analyzer-ebpf",
    "frame-analyzer-ebpf-common",
    "examples/simple-analyzer",
    "xtask"
]
resolver = "2"
default-members = ["frame-analyzer-ebpf-common", "frame-analyzer-ebpf"]

[workspace.package]
edition = "2024"
version = "0.3.4"
authors = ["shadow3aaa@github.com"]
license = "GPL-3.0"
repository = "https://github.com/shadow3aaa/frame-analyzer-ebpf"
description = "eBPF-based frame analyzer for Android"
documentation = "https://docs.rs/frame-analyzer-ebpf"
readme = "README.md"
keywords = ["ebpf", "android", "frame-analysis"]
categories = ["os::linux-programming", "embedded"]
homepage = "https://github.com/shadow3aaa/frame-analyzer-ebpf"

[workspace.dependencies]
# 项目内部依赖
frame-analyzer = { path = "./frame-analyzer", version = "0.3.4" }
frame-analyzer-ebpf-common = { path = "./frame-analyzer-ebpf-common", version = "0.3.4" }
# 锁定到main分支，保留ebpf特性
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-ebpf = { git = "https://github.com/aya-rs/aya", features = ["ebpf"], default-features = false, branch = "main" }
cty = { version = "0.2.2", default-features = false }
# 系统/跨平台依赖
libc = { version = "0.2.153", features = [] }
mio = { version = "1.0.4", features = ["os-ext"] }
cc = "1.0"
# 通用工具依赖
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
# 示例程序与xtask依赖
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
thiserror = "1.0.57"
ctor = "0.4.0"
once_cell = "1.19.0"
cargo_metadata = "0.23.1"

# 工作区全局profile配置
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
opt-level = 3
debug-assertions = false
strip = "symbols"
rustflags = [
    "-C", "linker-plugin-lto",
    "-C", "inline-threshold=1000"
]

[profile.release.package.frame-analyzer-ebpf]
rustflags = [
    "-C", "target-feature=+alu32",
    "-C", "force-frame-pointers=off"
]

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[workspace.metadata.ebpf]
target = "bpfel-unknown-none"
cpu = "generic"

# 保留patch块，强制替换crates.io的aya为git源（稳定特性）
[patch.crates-io]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
