[package]
name = "frame-analyzer-ebpf-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[features]
default = []
user = ["dep:aya"]
bpf = ["dep:aya-ebpf", "aya-ebpf/ebpf"]

[dependencies]
# 直接指定git源，不再依赖工作区传递，避免解析失效
aya = { git = "https://github.com/aya-rs/aya", branch = "main", optional = true }
aya-ebpf = { git = "https://github.com/aya-rs/aya", features = ["ebpf"], default-features = false, branch = "main", optional = true }
libc = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
name = "frame_analyzer_ebpf_common"
