[package]
name = "frame-analyzer-ebpf-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[features]
default = []
user = ["dep:aya"]
bpf = ["dep:aya-ebpf"] # 工作区已声明ebpf特性，无需重复指定

[dependencies]
# 继承工作区的本地aya依赖，保留可选性
aya = { workspace = true, optional = true }
aya-ebpf = { workspace = true, optional = true }
libc = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
name = "frame_analyzer_ebpf_common"
