[package]
name = "frame-analyzer-ebpf-common"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[features]
default = []
user = ["dep:aya"]
bpf = ["dep:aya-ebpf"] # aya-ebpf无ebpf特性，仅声明依赖关联

[dependencies]
# 强制使用本地源码版本，避免拉取crates.io的aya-ebpf 0.1.1仓库版
aya = { path = "../vendor/aya/aya", version = "0.13.1", optional = true }
aya-ebpf = { path = "../vendor/aya/ebpf/aya-ebpf", version = "0.1.1", optional = true }
libc = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
name = "frame_analyzer_ebpf_common"
