cargo-features = ["profile-rustflags"]

[package]
name = "frame-analyzer-ebpf"
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false
publish = false
build = "build.rs"

[dependencies]
# 匹配工作区降级后的aya-ebpf 0.1.1版本
aya-ebpf = { workspace = true, features = ["no_std"] }
cty = { workspace = true }
frame-analyzer-ebpf-common = { workspace = true, features = ["bpf"] }

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"
name = "frame_analyzer_ebpf"

[features]
ebpf = []
default = ["ebpf"]

[package.metadata.ebpf]
target = "bpfel-unknown-none"
cpu = "generic"
# 新增：指定eBPF程序类型，适配aya-ebpf 0.1.1的加载逻辑
prog-type = "tracepoint"
