cargo-features = ["profile-rustflags"]

[package]
name = "frame-analyzer-ebpf"
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false
publish = false
build = "build.rs"

[dependencies]
# 直接指定git源，跳过工作区依赖传递
aya-ebpf = { git = "https://github.com/aya-rs/aya", features = ["ebpf"], default-features = false, branch = "main" }
cty = { workspace = true }
# 使用本地相对路径依赖，避免工作区解析失效
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["bpf"] }

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"
name = "frame_analyzer_ebpf"
required-features = ["ebpf"]

[features]
ebpf = ["aya-ebpf/ebpf", "frame-analyzer-ebpf-common/bpf"]
default = ["ebpf"]

[package.metadata.ebpf]
target = "bpfel-unknown-none"
cpu = "generic"
prog-type = "tracepoint"
