cargo-features = ["profile-rustflags"]

[package]
name = "frame-analyzer-ebpf"
edition = "2024"
version.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false
publish = false
build = "build.rs"

[dependencies]
# 继承工作区的本地aya-ebpf依赖
aya-ebpf = { workspace = true }
cty = { workspace = true }
# 保留本地路径依赖，特性继承不变
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["bpf"] }

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"
name = "frame_analyzer_ebpf"
required-features = ["ebpf"]

[features]
# 工作区已声明ebpf特性，仅保留依赖关联即可
ebpf = ["frame-analyzer-ebpf-common/bpf"]
default = ["ebpf"]

[package.metadata.ebpf]
target = "bpfel-unknown-none"
cpu = "generic"
prog-type = "tracepoint"
