[package]
name = "frame-analyzer"
readme.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aya = { workspace = true }
frame-analyzer-ebpf-common = { workspace = true, features = ["user"] }
anyhow = { workspace = true }
libc = { workspace = true } # 删除android特性，该特性不存在
thiserror = { workspace = true }
ctor = { workspace = true }
ctrlc = { workspace = true }
mio = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cc = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata]
supported-targets = ["aarch64-linux-android", "aarch64-unknown-linux-gnu"]
ndk-version = "25c"
