[package]
name = "frame-analyzer"
readme.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
# 继承工作区的本地aya依赖
aya = { workspace = true }
# 保留本地路径依赖和特性配置
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["user"] }
anyhow = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
ctor = { workspace = true }
ctrlc = { workspace = true }
mio = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cc = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
required-features = ["user"]

[features]
default = ["user"]
user = ["frame-analyzer-ebpf-common/user"]

[package.metadata]
supported-targets = ["aarch64-linux-android", "aarch64-unknown-linux-gnu"]
ndk-version = "25c"
