[package]
name = "simple-analyzer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Simple frame analyzer example for Android"
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
frame-analyzer = { workspace = true }
libc = { workspace = true } # 删除android特性，该特性不存在

[[bin]]
name = "simple-analyzer"
path = "src/main.rs" # 新增：显式指定二进制入口，避免编译歧义
