[package]
name = "simple-analyzer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Simple frame analyzer example for Android"
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
# 使用本地相对路径依赖frame-analyzer，避免工作区解析失效
frame-analyzer = { path = "../../frame-analyzer" }
libc = { workspace = true }
# 直接指定git源，跳过工作区依赖传递
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }

[features]
default = ["user"]
user = ["frame-analyzer/user"]

[[bin]]
name = "simple-analyzer"
path = "src/main.rs"
required-features = ["user"]
