[package]
name = "simple-analyzer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Simple frame analyzer example for Android"
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
# 保留本地路径依赖frame-analyzer
frame-analyzer = { path = "../../frame-analyzer" }
libc = { workspace = true }
# 继承工作区的本地aya依赖
aya = { workspace = true }

[features]
default = ["user"]
user = ["frame-analyzer/user"]

[[bin]]
name = "simple-analyzer"
path = "src/main.rs"
required-features = ["user"]
